add transaction history, working-hours, preferred communication